Modificata la risposta della chiamata /feed/ nel file api.yaml e nel backend e modificato il frontend
